@@ -15,11 +15,13 @@ v1.1.2 (2026-01-24)
     - 过滤多个连续的标点符号
     - 过滤标点符号后面的空白字符
   * 修复 PC 端网页 XSS 安全问题
+  * 修复 HTTP 服务 Listener 资源泄漏
   * Fix leading punctuation filtering issue for cards
     - Filter leading Chinese punctuation marks: 。！？，
     - Filter multiple consecutive punctuation marks
     - Filter whitespace after punctuation marks
   * Fix PC web page XSS security issue
+  * Fix HTTP service Listener resource leak
 
 
 v1.1.1 (2026-01-24)
